updated keras example to use latest model

--- a/examples/keras classifier usage examples.ipynb
+++ b/examples/keras classifier usage examples.ipynb
@@ -41,7 +41,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 3.39 s\n"
+      "Wall time: 4.67 s\n"
      ]
     }
    ],
@@ -55,7 +55,7 @@
     "model.add(Dense(1, activation='sigmoid'))\n",
     "model.compile(optimizer='adam', loss='mse')\n",
     "\n",
-    "model.load_weights(result_folder + 'predict/tonePredictorUkr.h5')"
+    "model.load_weights(result_folder + 'predict/model.h5')"
    ]
   },
   {
@@ -69,7 +69,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 41.3 s\n"
+      "Wall time: 40.3 s\n"
      ]
     }
    ],
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -106,7 +106,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tone of word \"приголомшливі\" is 0.96\n"
+      "tone of word \"приголомшливі\" is 1.29\n"
      ]
     }
    ],
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -125,7 +125,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tone of word \"калічать\" is -1.30\n"
+      "tone of word \"калічать\" is -1.94\n"
      ]
     }
    ],
